--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     <div class="panel" >
         <form id="locationInput">
+            <label for="search" class="visually-hidden">Search location:</label>
             <input type="text" class="search" placeholder="Search location..." />
             <button type="submit" class="submit" >
                 <i class="fa fa-magnifying-glass"></i>
