--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <ul class="cities" style="list-style: none; padding: 0;">
             <li class="city">Chennai</li>
-            <li class="city">Manali</li>
+            <li class="city">Gulmarg</li>
             <li class="city">Bengaluru</li>
             <li class="city">Oslo</li>
             <li class="city">Mawsynram</li>
