--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <li class="city">Chennai</li>
             <li class="city">Gulmarg</li>
             <li class="city">Bengaluru</li>
+             <li class="city">Manali</li>
             <li class="city">Oslo</li>
             <li class="city">Mawsynram</li>
         </ul>
